--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2394,6 +2394,44 @@ input, select, textarea {
 			top: 0.25em;
 		}
 
+		.image.thumb {
+			text-align: center;
+		}
+
+			.image.thumb:after {
+				-moz-transition: opacity 0.2s ease-in-out;
+				-webkit-transition: opacity 0.2s ease-in-out;
+				-ms-transition: opacity 0.2s ease-in-out;
+				transition: opacity 0.2s ease-in-out;
+				border-radius: 0.35em;
+				border: solid 3px rgba(255, 255, 255, 0.5);
+				color: #fff;
+				content: 'View';
+				display: inline-block;
+				font-size: 0.8em;
+				font-weight: 400;
+				left: 50%;
+				line-height: 2.25em;
+				margin: -1.25em 0 0 -3em;
+				opacity: 0;
+				padding: 0 1.5em;
+				position: absolute;
+				text-align: center;
+				text-decoration: none;
+				top: 50%;
+				white-space: nowrap;
+			}
+
+			.image.thumb:hover:after {
+				background: url("images/overlay_blur.png"), url("images/overlay_blur.png");
+				opacity: 1.0;
+			}
+
+			.image.thumb:hover:before {
+				background: url("images/overlay.png"), url("images/overlay.png");
+				opacity: 1.0;
+			}
+
 		.image.fit {
 			display: block;
 			margin: 0 0 2em 0;
@@ -2402,6 +2440,7 @@ input, select, textarea {
 
 			.image.fit img {
 				width: 100%;
+				max-height: 200px;
 			}
 
 		.image.main {
